--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,7 +1,7 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="speakers">
+    <ion-tab-button tab="agenda">
       <ion-icon name="calendar"></ion-icon>
       <ion-label>Agenda</ion-label>
     </ion-tab-button>
