--- a/src/app/swag/swag.page.html
+++ b/src/app/swag/swag.page.html
@@ -5,5 +5,5 @@
 </ion-header>
 
 <ion-content>
-  <ion-button (click)="submit()">Send request</ion-button>
+  <ion-button (click)="openSwagModal()">Enter to win</ion-button>
 </ion-content>
