--- a/src/app/components/agenda-card/agenda-card.component.scss
+++ b/src/app/components/agenda-card/agenda-card.component.scss
@@ -1,27 +1,29 @@
+$card-margin: 16px;
+
 ion-card {
   border-radius: 16px;
 
-  margin: 0 0 16px 0;
+  margin: 0 0 #{$card-margin} 0;
 
-  background: white;
+  background: var(--ion-background-color);
   box-shadow: none;
-}
-
-ion-avatar {
-  margin: 0 0 16px 0;
 }
 
 ion-card-header {
   padding-bottom: 2px;
 }
 
-ion-card-title {
-  margin: 0 0 8px 0;
+ion-card-header ion-avatar {
+  margin: 0 0 #{$card-margin} 0;
+}
+
+ion-card-header ion-card-title {
+  margin: 0 0 #{$card-margin / 2} 0;
 
   font-size: 18px;
 }
 
-ion-card-subtitle {
+ion-card-header ion-card-subtitle {
   text-transform: none;
 
   font-weight: 500;
