--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,6 +3,8 @@
 
 /** Ionic CSS Variables **/
 :root {
+  --ion-item-border-color: #f2f2f6;
+
   --ion-background-color: #ffffff;
   --ion-background-color-rgb: 255,255,255;
 
