--- a/src/global.scss
+++ b/src/global.scss
@@ -29,3 +29,7 @@ ion-content.page-content,
 ion-content.page-content ion-toolbar {
   --background: var(--ion-color-light);
 }
+
+.text-color-primary {
+  --color: var(--ion-color-primary);
+}
