chore(): more clean up

--- a/src/app/components/agenda-card/agenda-card.component.scss
+++ b/src/app/components/agenda-card/agenda-card.component.scss
@@ -33,3 +33,7 @@ ion-card-header ion-card-subtitle {
 ion-card-content {
   font-size: 12px;
 }
+
+.watch-live {
+  --color: var(--ion-color-primary);
+}
