--- a/src/app/pages/agenda-item/agenda-item.page.html
+++ b/src/app/pages/agenda-item/agenda-item.page.html
@@ -37,7 +37,7 @@
 
   <ion-list-header>Watch</ion-list-header>
   <ion-list [inset]="true">
-    <ion-item [button]="true" [detail]="false" class="text-color-primary">
+    <ion-item [button]="true" [detail]="false" class="watch-live">
       <ion-label>Watch live at ionic.io/events</ion-label>
     </ion-item>
     <ion-item [button]="true">
