fix(): create agenda item page properly

--- a/src/app/pages/tab1/agenda-item/agenda-item.page.html
+++ b/src/app/pages/tab1/agenda-item/agenda-item.page.html
@@ -1,7 +1,7 @@
 <ion-header collapse="fade" [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/speakers" text="Agenda"></ion-back-button>
+      <ion-back-button defaultHref="/" text="Agenda"></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
