--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -5,6 +5,10 @@
       <ion-icon name="calendar"></ion-icon>
       <ion-label>Agenda</ion-label>
     </ion-tab-button>
+    <ion-tab-button tab="speakers">
+      <ion-icon name="people"></ion-icon>
+      <ion-label>Speakers</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
