fix(): create firstName and lastName fields for speakers

--- a/src/app/components/speaker-card/speaker-card.component.html
+++ b/src/app/components/speaker-card/speaker-card.component.html
@@ -5,7 +5,7 @@
   (click)="presentModal()"
 >
   <ion-card-header>
-    <ion-card-title>{{ speaker.name }}</ion-card-title>
+    <ion-card-title>{{ speaker.firstName }} {{ speaker.lastName }}</ion-card-title>
     <ion-card-subtitle>{{ speaker.role }}, {{ speaker.company }}</ion-card-subtitle>
   </ion-card-header>
   <ion-card-content><!-- TODO: logo --></ion-card-content>
