--- a/src/app/components/speaker-view/speaker-view.component.scss
+++ b/src/app/components/speaker-view/speaker-view.component.scss
@@ -1,6 +1,41 @@
 #close-button {
-  position: absolute;
+  position: fixed;
 
   top: calc(16px + var(--ion-safe-area-top));
   right: 8px;
+}
+
+h2 {
+  margin-top: 0;
+
+  font-size: 20px;
+  font-weight: 700;
+}
+
+
+ion-text {
+  color: var(--ion-color-step-650);
+
+  font-size: 18px;
+  font-weight: 400;
+
+  line-height: 24px;
+}
+
+.connect-button {
+  width: 80px;
+  height: 56px;
+
+  margin: 0 6px;
+
+  font-size: 14px;
+}
+
+.connect-button div {
+  color: var(--ion-color-primary);
+}
+
+.connect-button ion-icon {
+  height: 22px;
+  width: 100%;
 }
