--- a/src/app/components/agenda-card/agenda-card.component.html
+++ b/src/app/components/agenda-card/agenda-card.component.html
@@ -7,7 +7,7 @@
       <img [src]="speaker.photoUrl" />
     </ion-avatar>
     <ion-card-title>{{ title }}</ion-card-title>
-    <ion-card-subtitle>{{ speaker.name }}, {{ speaker.role }}, {{ speaker.company }}</ion-card-subtitle>
+    <ion-card-subtitle>{{ speaker.firstName }} {{ speaker.lastName }}, {{ speaker.role }}, {{ speaker.company }}</ion-card-subtitle>
   </ion-card-header>
   <ion-card-content>{{ startTime }} - {{ endTime}} CT</ion-card-content>
 </ion-card>
