--- a/src/app/components/agenda-card/agenda-card.component.html
+++ b/src/app/components/agenda-card/agenda-card.component.html
@@ -6,8 +6,8 @@
     <ion-avatar>
       <img [src]="speaker.photoUrl" />
     </ion-avatar>
-    <ion-card-title>{{ title }}</ion-card-title>
-    <ion-card-subtitle>{{ speaker.firstName }} {{ speaker.lastName }}, {{ speaker.role }}, {{ speaker.company }}</ion-card-subtitle>
+    <ion-card-title>{{ agenda.title }}</ion-card-title>
+    <ion-card-subtitle>{{ speaker.firstName }} {{ speaker.lastName }}, {{ speaker.role }}, {{ company.name }}</ion-card-subtitle>
   </ion-card-header>
-  <ion-card-content>{{ startTime }} - {{ endTime}} CT</ion-card-content>
+  <ion-card-content>{{ agenda.startTime }} - {{ agenda.endTime }} CT</ion-card-content>
 </ion-card>
