--- a/src/app/components/speaker-card/speaker-card.component.html
+++ b/src/app/components/speaker-card/speaker-card.component.html
@@ -6,7 +6,7 @@
 >
   <ion-card-header>
     <ion-card-title>{{ speaker.firstName }} {{ speaker.lastName }}</ion-card-title>
-    <ion-card-subtitle>{{ speaker.role }}, {{ speaker.company }}</ion-card-subtitle>
+    <ion-card-subtitle>{{ speaker.role }}, {{ company.name }}</ion-card-subtitle>
   </ion-card-header>
   <ion-card-content><!-- TODO: logo --></ion-card-content>
 </ion-card>
