feat(speaker): add base company image

--- a/src/app/components/speaker-card/speaker-card.component.scss
+++ b/src/app/components/speaker-card/speaker-card.component.scss
@@ -42,3 +42,12 @@ ion-card-header ion-card-subtitle {
   font-weight: 500;
   font-size: 16px;
 }
+
+ion-card-content img {
+  position: absolute;
+
+  top: 20px;
+  left: 20px;
+
+  height: 30px;
+}
