--- a/src/app/components/speaker-card/speaker-card.component.html
+++ b/src/app/components/speaker-card/speaker-card.component.html
@@ -8,5 +8,7 @@
     <ion-card-title>{{ speaker.firstName }} {{ speaker.lastName }}</ion-card-title>
     <ion-card-subtitle>{{ speaker.role }}, {{ company.name }}</ion-card-subtitle>
   </ion-card-header>
-  <ion-card-content><!-- TODO: logo --></ion-card-content>
+  <ion-card-content>
+    <img [src]="company.logoUrl" />
+  </ion-card-content>
 </ion-card>
