--- a/src/app/components/speaker-view/speaker-view.component.html
+++ b/src/app/components/speaker-view/speaker-view.component.html
@@ -5,7 +5,7 @@
     </ion-button>
   </ion-buttons>
 
-  <app-speaker-card [id]="id"></app-speaker-card>
+  <app-speaker-card [safeArea]="true" [id]="id"></app-speaker-card>
 
   <div class="ion-padding">
     <h2>About {{ speaker.firstName }}</h2>
