--- a/src/app/components/speaker-card/speaker-card.component.html
+++ b/src/app/components/speaker-card/speaker-card.component.html
@@ -1,5 +1,8 @@
 <ion-card
-  [ngClass]="{ 'card-button': button }"
+  [ngClass]="{
+    'card-button': button,
+    'safe-area': safeArea
+  }"
   [button]="button"
   [style.backgroundImage]="'url(' + speaker.photoUrl + ')'"
   (click)="presentModal()"
