fix(): smaller images, safe are on content in modal

--- a/src/app/components/speaker-view/speaker-view.component.scss
+++ b/src/app/components/speaker-view/speaker-view.component.scss
@@ -12,6 +12,9 @@ h2 {
   font-weight: 700;
 }
 
+ion-content {
+  --padding-bottom: var(--ion-safe-area-bottom);
+}
 
 ion-text {
   color: var(--ion-color-step-650);
