feat(speakers): add speakers tab and speaker detail view (#3)

--- a/src/app/pages/tab1/agenda-item/agenda-item.page.html
+++ b/src/app/pages/tab1/agenda-item/agenda-item.page.html
@@ -13,7 +13,7 @@
     </ion-avatar>
 
     <h1>{{ agendaItem.title }}</h1>
-    <h2>{{ speaker.name }}, {{ speaker.role }}, {{ speaker.company }}</h2>
+    <h2>{{ speaker.firstName }} {{ speaker.lastName }}, {{ speaker.role }}, {{ company.name }}</h2>
   </div>
 
   <ion-list-header>About this talk</ion-list-header>
