--- a/src/app/components/agenda-card/agenda-card.component.html
+++ b/src/app/components/agenda-card/agenda-card.component.html
@@ -3,11 +3,13 @@
   [button]="true"
 >
   <ion-card-header>
-    <ion-avatar>
-      <img [src]="speaker.photoUrl" />
-    </ion-avatar>
+    <app-agenda-avatars size="48px" [urls]="photoUrls"></app-agenda-avatars>
     <ion-card-title>{{ agenda.title }}</ion-card-title>
-    <ion-card-subtitle>{{ speaker.firstName }} {{ speaker.lastName }}, {{ speaker.role }}, {{ company.name }}</ion-card-subtitle>
+    <ion-card-subtitle>
+      <div *ngFor="let speaker of speakers">
+        {{ speaker.firstName }} {{ speaker.lastName }}, {{ speaker.role }}, {{ company.name }}
+      </div>
+      </ion-card-subtitle>
   </ion-card-header>
   <ion-card-content>{{ agenda.startTime }} - {{ agenda.endTime }} CT</ion-card-content>
 </ion-card>
