--- a/src/app/components/agenda-avatars/agenda-avatars.component.scss
+++ b/src/app/components/agenda-avatars/agenda-avatars.component.scss
@@ -14,7 +14,12 @@ ion-avatar {
   width: 100%;
   height: 100%;
 
-  outline: 4px solid var(--outline-color);
+  /**
+   * Do not use outline here because
+   * WebKit does not respect border
+   * radius when using outline.
+   */
+  box-shadow: 0px 0px 0px 4px var(--outline-color);
 }
 
 /**
