--- a/src/app/pages/sponsors/sponsors.page.html
+++ b/src/app/pages/sponsors/sponsors.page.html
@@ -16,6 +16,7 @@
     <app-sponsor-card
       *ngFor="let sponsor of platinumSponsors"
       [id]="sponsor.id"
+      [button]="true"
     >
     </app-sponsor-card>
   </div>
@@ -25,6 +26,7 @@
     <app-sponsor-card
       *ngFor="let sponsor of goldSponsors"
       [id]="sponsor.id"
+      [button]="true"
     >
     </app-sponsor-card>
   </div>
@@ -34,6 +36,7 @@
     <app-sponsor-card
       *ngFor="let sponsor of silverSponsors"
       [id]="sponsor.id"
+      [button]="true"
     >
     </app-sponsor-card>
   </div>
@@ -43,6 +46,7 @@
     <app-sponsor-card
       *ngFor="let sponsor of bronzeSponsors"
       [id]="sponsor.id"
+      [button]="true"
     >
     </app-sponsor-card>
   </div>
