--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -9,6 +9,10 @@
       <ion-icon name="people"></ion-icon>
       <ion-label>Speakers</ion-label>
     </ion-tab-button>
+    <ion-tab-button tab="sponsors">
+      <ion-icon name="star"></ion-icon>
+      <ion-label>Sponsors</ion-label>
+    </ion-tab-button>
     <ion-tab-button tab="swag">
       <ion-icon name="shirt"></ion-icon>
       <ion-label>Swag</ion-label>
