fix(): add grid

--- a/src/app/components/sponsor-card/sponsor-card.component.scss
+++ b/src/app/components/sponsor-card/sponsor-card.component.scss
@@ -1,11 +1,9 @@
-$card-margin: 16px;
-
 ion-card.card-button {
   border-radius: 16px;
 }
 
 ion-card {
-  margin: 0 0 #{$card-margin} 0;
+  margin: 0;
 
   border-radius: 0px;
 
