--- a/src/app/pages/sponsors/sponsors.page.html
+++ b/src/app/pages/sponsors/sponsors.page.html
@@ -12,7 +12,7 @@
   </ion-header>
 
   <ion-list-header>Platinum</ion-list-header>
-  <div class="ion-padding">
+  <div class="ion-padding grid">
     <app-sponsor-card
       *ngFor="let sponsor of platinumSponsors"
       [id]="sponsor.id"
@@ -22,7 +22,7 @@
   </div>
 
   <ion-list-header>Gold</ion-list-header>
-  <div class="ion-padding">
+  <div class="ion-padding grid">
     <app-sponsor-card
       *ngFor="let sponsor of goldSponsors"
       [id]="sponsor.id"
@@ -32,7 +32,7 @@
   </div>
 
   <ion-list-header>Silver</ion-list-header>
-  <div class="ion-padding">
+  <div class="ion-padding grid">
     <app-sponsor-card
       *ngFor="let sponsor of silverSponsors"
       [id]="sponsor.id"
@@ -42,7 +42,7 @@
   </div>
 
   <ion-list-header>Bronze</ion-list-header>
-  <div class="ion-padding">
+  <div class="ion-padding grid">
     <app-sponsor-card
       *ngFor="let sponsor of bronzeSponsors"
       [id]="sponsor.id"
