--- a/src/app/components/permissions-modal/permissions-modal.component.html
+++ b/src/app/components/permissions-modal/permissions-modal.component.html
@@ -7,8 +7,10 @@
 
 <ion-content>
   <div class="ion-padding">
-    <ion-text>Get reminders when the event is about to start, talk recordings have been published, 
-      and more!</ion-text> <p></p>
+    <ion-text>Welcome to Enterprise App Summit 2021!
+    <p>Get reminders when the event is about to start, talk recordings have been published, 
+      and more!</p>
+    </ion-text> <p></p>
     <ion-button (click)="onContinue()" expand="block">Continue</ion-button>
   </div>
 </ion-content>
