--- a/src/app/components/speaker-card/speaker-card.component.scss
+++ b/src/app/components/speaker-card/speaker-card.component.scss
@@ -42,7 +42,7 @@ ion-card-header ion-card-subtitle {
 }
 
 ion-card-content {
-  height: 60px;
+  height: calc(60px + var(--ion-safe-area-top));
 
   background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
 }
