--- a/src/app/components/swag-modal/swag-modal.page.html
+++ b/src/app/components/swag-modal/swag-modal.page.html
@@ -1,50 +1,49 @@
-<ion-header>
+<ion-header [translucent]="true" collapse="fade">
   <ion-toolbar>
-    <ion-button (click)="closeModal()" slot="start" fill="clear">Cancel</ion-button>
+    <ion-buttons slot="start">
+      <ion-button (click)="closeModal()">Cancel</ion-button>
+    </ion-buttons>
     <ion-title>Enter to win</ion-title>
-    <ion-button (click)="submitForm()" slot="end" fill="clear">Submit</ion-button>
+
+    <ion-buttons slot="end">
+      <ion-button (click)="submitForm()">Submit</ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-list-header>
-    <ion-label color="ios-lh-labl-gray">Contact Info</ion-label>
-  </ion-list-header>
-  <ion-list>
+<ion-content [fullscreen]="true" class="page-content">
+  <ion-list-header>Contact Info</ion-list-header>
+  <ion-list [inset]="true">
     <ion-item>
-      <ion-label>First Name</ion-label>
+      <ion-label slot="start">First Name</ion-label>
       <ion-input placeholder="John" [(ngModel)]="hubspotData.firstname" name="firstname"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label>Last Name</ion-label>
-      <ion-input placeholder="John" [(ngModel)]="hubspotData.lastname" name="lastname"></ion-input>
+      <ion-label slot="start">Last Name</ion-label>
+      <ion-input placeholder="Doe" [(ngModel)]="hubspotData.lastname" name="lastname"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label>Work Email</ion-label>
+      <ion-label slot="start">Work Email</ion-label>
       <ion-input placeholder="jdoe@email.com" [(ngModel)]="hubspotData.email" name="email"></ion-input>
     </ion-item>
   </ion-list>
-  <ion-list-header>
-    <ion-label color="ios-lh-labl-gray">Mailing Address</ion-label>
-  </ion-list-header>
-  <ion-list>
+  <ion-list-header>Mailing Address</ion-list-header>
+  <ion-list [inset]="true">
     <ion-item>
-      <ion-label>Street</ion-label>
+      <ion-label slot="start">Street</ion-label>
       <ion-input placeholder="Required" [(ngModel)]="hubspotData.address" name="address"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label>City</ion-label>
+      <ion-label slot="start">City</ion-label>
       <ion-input placeholder="Required" [(ngModel)]="hubspotData.city" name="city"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label>Zip</ion-label>
+      <ion-label slot="start">Zip</ion-label>
       <ion-input placeholder="Required" [(ngModel)]="hubspotData.zip" name="zip"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label>Country</ion-label>
+      <ion-label slot="start">Country</ion-label>
       <ion-input placeholder="Required" [(ngModel)]="hubspotData.country_pl_" name="country"></ion-input>
     </ion-item>
   </ion-list>
-
-  <ion-button (click)="submitForm()">Submit</ion-button>
 </ion-content>
