feat(swag): add form validation

--- a/src/app/components/swag-modal/swag-modal.page.html
+++ b/src/app/components/swag-modal/swag-modal.page.html
@@ -12,38 +12,48 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" class="page-content">
-  <ion-list-header>Contact Info</ion-list-header>
-  <ion-list [inset]="true">
-    <ion-item>
-      <ion-label slot="start">First Name</ion-label>
-      <ion-input placeholder="John" [(ngModel)]="hubspotData.firstname" name="firstname"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label slot="start">Last Name</ion-label>
-      <ion-input placeholder="Doe" [(ngModel)]="hubspotData.lastname" name="lastname"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label slot="start">Work Email</ion-label>
-      <ion-input placeholder="jdoe@email.com" [(ngModel)]="hubspotData.email" name="email"></ion-input>
-    </ion-item>
-  </ion-list>
-  <ion-list-header>Mailing Address</ion-list-header>
-  <ion-list [inset]="true">
-    <ion-item>
-      <ion-label slot="start">Street</ion-label>
-      <ion-input placeholder="Required" [(ngModel)]="hubspotData.address" name="address"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label slot="start">City</ion-label>
-      <ion-input placeholder="Required" [(ngModel)]="hubspotData.city" name="city"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label slot="start">Zip</ion-label>
-      <ion-input placeholder="Required" [(ngModel)]="hubspotData.zip" name="zip"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label slot="start">Country</ion-label>
-      <ion-input placeholder="Required" [(ngModel)]="hubspotData.country_pl_" name="country"></ion-input>
-    </ion-item>
-  </ion-list>
+  <form (ngSubmit)="onSubmit()" #hubspotForm="ngForm">
+    <ion-list-header>Contact Info</ion-list-header>
+    <ion-list [inset]="true">
+      <ion-item>
+        <ion-label>First Name</ion-label>
+        <ion-input placeholder="John" [(ngModel)]="hubspotData.firstname" name="firstname" #firstName="ngModel" required></ion-input>
+
+        <ion-text slot="error" *ngIf="!firstName.valid && (!firstName.pristine || hubspotForm.submitted)">First name is required</ion-text>
+      </ion-item>
+      <ion-item>
+        <ion-label>Last Name</ion-label>
+        <ion-input placeholder="Doe" [(ngModel)]="hubspotData.lastname" name="lastname" #lastName="ngModel" required></ion-input>
+        <ion-text slot="error" *ngIf="!lastName.valid && (!lastName.pristine || hubspotForm.submitted)">Last name is required</ion-text>
+      </ion-item>
+      <ion-item>
+        <ion-label>Work Email</ion-label>
+        <ion-input type="email" placeholder="jdoe@ionic.io" [(ngModel)]="hubspotData.email" name="email" #email="ngModel" required></ion-input>
+        <ion-text class="ion-padding-bottom" slot="error" *ngIf="!email.valid && (!email.pristine || hubspotForm.submitted)">Email is required</ion-text>
+
+      </ion-item>
+    </ion-list>
+    <ion-list-header>Mailing Address</ion-list-header>
+    <ion-list [inset]="true">
+      <ion-item>
+        <ion-label>Street</ion-label>
+        <ion-input placeholder="123 Any Street" [(ngModel)]="hubspotData.address" name="address" #street="ngModel" required></ion-input>
+        <ion-text slot="error" *ngIf="!street.valid && (!street.pristine || hubspotForm.submitted)">Street is required</ion-text>
+      </ion-item>
+      <ion-item>
+        <ion-label>City</ion-label>
+        <ion-input placeholder="Boston" [(ngModel)]="hubspotData.city" name="city" #city="ngModel" required></ion-input>
+        <ion-text slot="error" *ngIf="!city.valid && (!city.pristine || hubspotForm.submitted)">City is required</ion-text>
+      </ion-item>
+      <ion-item>
+        <ion-label>Zip</ion-label>
+        <ion-input placeholder="02215" [(ngModel)]="hubspotData.zip" name="zip"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label>Country</ion-label>
+        <ion-input placeholder="United States" [(ngModel)]="hubspotData.country_pl_" name="country" #country="ngModel" required></ion-input>
+        <ion-text class="ion-padding-bottom" slot="error" *ngIf="!country.valid && (!country.pristine || hubspotForm.submitted)">Country is required</ion-text>
+      </ion-item>
+    </ion-list>
+  </form>
 </ion-content>
