--- a/src/app/pages/tab1/agenda-item/agenda-item.page.html
+++ b/src/app/pages/tab1/agenda-item/agenda-item.page.html
@@ -45,7 +45,7 @@
     <ion-item [button]="true" [detail]="false" class="watch-live">
       <ion-label>Watch live at ionic.io/events</ion-label>
     </ion-item>
-    <ion-item [button]="true" (click)="setReminder()">
+    <ion-item [button]="true" (click)="setReminder(agendaItem)">
       <ion-label>Remind Me</ion-label>
     </ion-item>
   </ion-list>
