--- a/src/app/components/agenda-card/agenda-card.component.html
+++ b/src/app/components/agenda-card/agenda-card.component.html
@@ -11,5 +11,5 @@
       </div>
       </ion-card-subtitle>
   </ion-card-header>
-  <ion-card-content>{{ agenda.startTime }} - {{ agenda.endTime }} CT</ion-card-content>
+  <ion-card-content>{{ formatTalkTime(agenda) }}</ion-card-content>
 </ion-card>
