--- a/src/app/pages/tab1/agenda-item/agenda-item.page.html
+++ b/src/app/pages/tab1/agenda-item/agenda-item.page.html
@@ -35,7 +35,7 @@
     <ion-item>
       <ion-label>
         Wednesday, December 8th<br />
-        <ion-note>{{ agendaItem.startTime }} - {{ agendaItem.endTime }} CT</ion-note>
+        <ion-note>{{ formatTalkTime(agendaItem) }}</ion-note>
       </ion-label>
     </ion-item>
   </ion-list>
