--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -32,12 +32,12 @@
   --ion-color-step-950: #0d0d0d;
 
   /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
+  --ion-color-primary: #1B4DFF;
+  --ion-color-primary-rgb: 27,77,255;
   --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-contrast-rgb: 255,255,255;
+  --ion-color-primary-shade: #1844e0;
+  --ion-color-primary-tint: #325fff;
 
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
