--- a/src/app/pages/tab1/agenda-item/agenda-item.page.html
+++ b/src/app/pages/tab1/agenda-item/agenda-item.page.html
@@ -35,7 +35,7 @@
     <ion-item>
       <ion-label>
         Wednesday, December 8th<br />
-        <ion-note>8:00 AM - 9:00 AM CT</ion-note>
+        <ion-note>{{ formatTalkTime(agendaItem) }}</ion-note>
       </ion-label>
     </ion-item>
   </ion-list>
@@ -45,7 +45,7 @@
     <ion-item [button]="true" [detail]="false" class="watch-live">
       <ion-label>Watch live at ionic.io/events</ion-label>
     </ion-item>
-    <ion-item [button]="true">
+    <ion-item [button]="true" (click)="setReminder(agendaItem)">
       <ion-label>Remind Me</ion-label>
     </ion-item>
   </ion-list>
