--- a/src/app/pages/sponsors/sponsors.page.html
+++ b/src/app/pages/sponsors/sponsors.page.html
@@ -11,44 +11,46 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-list-header>Platinum</ion-list-header>
-  <div class="ion-padding grid">
-    <app-sponsor-card
-      *ngFor="let sponsor of platinumSponsors"
-      [id]="sponsor.id"
-      [button]="true"
-    >
-    </app-sponsor-card>
-  </div>
+  <div class="ion-padding-top">
+    <ion-list-header class="eas-header-large">Platinum</ion-list-header>
+    <div class="ion-padding grid">
+      <app-sponsor-card
+        *ngFor="let sponsor of platinumSponsors"
+        [id]="sponsor.id"
+        [button]="true"
+      >
+      </app-sponsor-card>
+    </div>
 
-  <ion-list-header>Gold</ion-list-header>
-  <div class="ion-padding grid">
-    <app-sponsor-card
-      *ngFor="let sponsor of goldSponsors"
-      [id]="sponsor.id"
-      [button]="true"
-    >
-    </app-sponsor-card>
-  </div>
+    <ion-list-header class="eas-header-large">Gold</ion-list-header>
+    <div class="ion-padding grid">
+      <app-sponsor-card
+        *ngFor="let sponsor of goldSponsors"
+        [id]="sponsor.id"
+        [button]="true"
+      >
+      </app-sponsor-card>
+    </div>
 
-  <ion-list-header>Silver</ion-list-header>
-  <div class="ion-padding grid">
-    <app-sponsor-card
-      *ngFor="let sponsor of silverSponsors"
-      [id]="sponsor.id"
-      [button]="true"
-    >
-    </app-sponsor-card>
-  </div>
+    <ion-list-header class="eas-header-large">Silver</ion-list-header>
+    <div class="ion-padding grid">
+      <app-sponsor-card
+        *ngFor="let sponsor of silverSponsors"
+        [id]="sponsor.id"
+        [button]="true"
+      >
+      </app-sponsor-card>
+    </div>
 
-  <ion-list-header>Bronze</ion-list-header>
-  <div class="ion-padding grid">
-    <app-sponsor-card
-      *ngFor="let sponsor of bronzeSponsors"
-      [id]="sponsor.id"
-      [button]="true"
-    >
-    </app-sponsor-card>
+    <ion-list-header class="eas-header-large">Bronze</ion-list-header>
+    <div class="ion-padding grid">
+      <app-sponsor-card
+        *ngFor="let sponsor of bronzeSponsors"
+        [id]="sponsor.id"
+        [button]="true"
+      >
+      </app-sponsor-card>
+    </div>
   </div>
 
 </ion-content>
