--- a/src/app/pages/swag/swag.page.html
+++ b/src/app/pages/swag/swag.page.html
@@ -11,7 +11,7 @@
     </ion-toolbar>
   </ion-header>
 
-  <h2 class="ion-padding-start ion-padding-end">Enter the Ionic swag raffle</h2>
+  <ion-list-header class="ion-padding-top ion-padding-start ion-padding-end eas-header-large">Enter the Ionic swag raffle</ion-list-header>
 
   <ion-card>
     <ion-card-header>
