--- a/src/app/components/speaker-view/speaker-view.component.html
+++ b/src/app/components/speaker-view/speaker-view.component.html
@@ -8,21 +8,21 @@
   <app-speaker-card [safeArea]="true" [id]="id"></app-speaker-card>
 
   <div class="ion-padding">
-    <h2>About {{ speaker.firstName }}</h2>
+    <h2 class="eas-header-large">About {{ speaker.firstName }}</h2>
     <ion-text>{{ speaker.biography }}</ion-text><br /><br />
 
-    <h2>Connect with {{ speaker.firstName }}</h2>
+    <h2 class="eas-header-large">Connect with {{ speaker.firstName }}</h2>
     <ion-button color="light" class="connect-button">
       <div>
         <ion-icon name="logo-linkedin"></ion-icon><br />
-        <span>LinkedIn</span>
+        <ion-label>LinkedIn</ion-label>
       </div>
     </ion-button>
 
     <ion-button color="light" class="connect-button">
       <div>
         <ion-icon name="logo-github"></ion-icon><br />
-        <div>GitHub</div>
+        <ion-label>GitHub</ion-label>
       </div>
     </ion-button>
 
