--- a/src/app/pages/tab1/agenda-item/agenda-item.page.html
+++ b/src/app/pages/tab1/agenda-item/agenda-item.page.html
@@ -21,18 +21,18 @@
     </h2>
   </div>
 
-  <ion-list-header>About this talk</ion-list-header>
+  <ion-list-header class="eas-header-small">About this talk</ion-list-header>
   <ion-list [inset]="true" class="description-list">
-    <ion-item>
+    <ion-item lines="none">
       <ion-text class="ion-padding-top ion-padding-bottom">
         {{ agendaItem.description }}
       </ion-text>
     </ion-item>
   </ion-list>
 
-  <ion-list-header>When</ion-list-header>
+  <ion-list-header class="eas-header-small">When</ion-list-header>
   <ion-list [inset]="true" class="when-list">
-    <ion-item>
+    <ion-item  lines="none">
       <ion-label>
         Wednesday, December 8th<br />
         <ion-note>{{ formatTalkTime(agendaItem) }}</ion-note>
@@ -40,12 +40,12 @@
     </ion-item>
   </ion-list>
 
-  <ion-list-header>Watch</ion-list-header>
+  <ion-list-header class="eas-header-small">Watch</ion-list-header>
   <ion-list [inset]="true">
     <ion-item [button]="true" [detail]="false" class="watch-live">
       <ion-label>Watch live at ionic.io/events</ion-label>
     </ion-item>
-    <ion-item [button]="true" (click)="setReminder(agendaItem)">
+    <ion-item [button]="true" (click)="setReminder(agendaItem)"  lines="none">
       <ion-label>Remind Me</ion-label>
     </ion-item>
   </ion-list>
