fix(); a few more style fixes

--- a/src/app/components/swag-modal/swag-modal.page.scss
+++ b/src/app/components/swag-modal/swag-modal.page.scss
@@ -12,3 +12,10 @@ ion-list-header {
 ion-list {
   margin-top: 8px !important;
 }
+
+/**
+ * This might be an Ionic bug
+ */
+ion-item {
+  --padding-start: 16px !important;
+}
