--- a/src/app/components/permissions-modal/permissions-modal.component.html
+++ b/src/app/components/permissions-modal/permissions-modal.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <h1 slot="start">Don't miss a thing</h1>
+    <h1 class="eas-header-large" slot="start">Don't miss a thing</h1>
     <ion-buttons id="close-button" slot="end">
       <ion-button color="medium" (click)="closeModal()">
         <ion-icon name="close-circle" size="large"></ion-icon>
