--- a/src/app/components/permissions-modal/permissions-modal.component.scss
+++ b/src/app/components/permissions-modal/permissions-modal.component.scss
@@ -1,14 +1,19 @@
+ion-header::after {
+  content: none;
+}
+
 ion-toolbar {
   --padding-top: 8px;
   --background: transparent;
   --border-color: transparent;
 }
 
-h1 {
-  font-size: 20px;
-  font-weight: 700;
+.ios h1 {
+  margin: 0 0 0 5px;
+}
 
-  margin: 0 0 0 4px;
+.md h1 {
+  margin: 0 0 0 16px;
 }
 
 ion-text {
